game jam updates

--- a/GameJams.html
+++ b/GameJams.html
@@ -54,50 +54,72 @@
 									<!-- Game Jam Boxes! -->
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="Mission-Moon.html" class="image featured"><img src="images/GameJamPics/MMcover.png" alt="" /></a>
+											<a href="https://pootpootpoot.itch.io/shifting-mausoleum" class="image featured"><img src="images/GameJamPics/SMausCover.png" alt="" /></a>
+											<header>
+												<h3>Boss Rush Jam 2024</h3>
+											</header>
+											<p>
+												This month-long jam was to make a boss rush game around the theme "Exchange". Probably my favorite genre. 
+												There's a lot I got to do for this jam - environment generation, the spellcasting system, character animation systems, 
+												camera system, and so much more. 
+											</p>
+											<footer>
+												<ul class="actions">
+													<li><a href="https://pootpootpoot.itch.io/shifting-mausoleum" class="button alt">View Submission</a></li>
+												</ul>
+											</footer>
+										</section>
+									</div>
+									<div class="col-4 col-6-medium col-12-small">
+										<section class="box">
+											<a href="https://pootpootpoot.itch.io/mission-13151514" class="image featured"><img src="images/GameJamPics/MMcover.png" alt="" /></a>
 											<header>
 												<h3>Game Off Game Jam 2020</h3>
 											</header>
-											<p>Hosted by Github, this month-long game jam is a project completed with Olivia Maciejewska. With the theme
+											<p>
+												Hosted by Github, this month-long game jam is a project completed with Olivia Maciejewska. With the theme
 												of "Moonshot", we decided to make a resource management survival game where the player must micro manage
 												his ship in order to make it to a distant moon.
 											</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="Mission-Moon.html" class="button alt">View Submission</a></li>
+													<li><a href="https://pootpootpoot.itch.io/mission-13151514" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="Twisted-Loop.html" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
+											<a href="https://pootpootpoot.itch.io/twisted-loop.html" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
 											<header>
 												<h3>Big Brain Game Jam 2.0</h3>
 											</header>
-											<p> A short 3 day jam with the goal to complete a game in the given time! The player must avoid the spinning 
-												pole, which will push you into lava if you do not jump or counter! This minigame earned 2nd place, with 
-												the highest ranking in visuals and theme.</p>
+											<p>
+												A short 3 day jam with the goal to complete a game in the given time! The player must avoid the spinning
+												pole, which will push you into lava if you do not jump or counter! This minigame earned 2nd place, with
+												the highest ranking in visuals and theme.
+											</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="Twisted-Loop.html" class="button alt">View Submission</a></li>
+													<li><a href="https://pootpootpoot.itch.io/twisted-loop.html" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="Oubliettes.html" class="image featured"><img src="images/GameJamPics/OubliettesCover.png" alt="" /></a>
+											<a href="https://pootpootpoot.itch.io/oubliettes" class="image featured"><img src="images/GameJamPics/OubliettesCover.png" alt="" /></a>
 											<header>
 												<h3>Great Harvest Game Jam</h3>
 											</header>
-											<p> A month long game jam, and my submission to the GD50 final project. This prototype is a playground for 
+											<p>
+												A month long game jam, and my submission to the GD50 final project. This prototype is a playground for
 												testing 2D mechanics from a bar hub to instantiated mission with various mechanics. The color scheme of
-												the game follows the pear-36 spectrum! 
+												the game follows the pear-36 spectrum!
 											</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="Oubliettes.html" class="button alt">View Submission</a></li>
+													<li><a href="https://pootpootpoot.itch.io/oubliettes" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -108,9 +130,11 @@
 											<header>
 												<h3>Extra Credits Game Jam #6</h3>
 											</header>
-											<p> A 48 hour Game Jam completed by Olivia Maciejewska and I. This game was made using Core, a game engine 
+											<p>
+												A 48 hour Game Jam completed by Olivia Maciejewska and I. This game was made using Core, a game engine
 												based on Epic Games's Unreal Engine. This multiplayer search-and-rescue FPS is based on the Spanish Flu
-												 and set on WWI.</p>
+												and set on WWI.
+											</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="https://therealmoopmoop.itch.io/man-down" class="button alt">View Submission</a></li>
@@ -124,17 +148,19 @@
 											<header>
 												<h3>My First Game Jam: Summer 2020</h3>
 											</header>
-											<p> My first game jam which lasted 2 weeks. Olivia Maciejewska and I made a cute infinite runner to match the 
-												theme of "change". The goal is to avoid toys while escaping the clutches of your mother. Don't let your 
-												diaper get changed!</p>
+											<p>
+												My first game jam which lasted 2 weeks. Olivia Maciejewska and I made a cute infinite runner to match the
+												theme of "change". The goal is to avoid toys while escaping the clutches of your mother. Don't let your
+												diaper get changed!
+											</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="https://therealmoopmoop.itch.io/diaperchange" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
-									</div>									
-									
+									</div>
+
 									<!-- End Game Jam Boxes-->
 
 								</div>
