--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <section id="banner">
             <header>
               <h2>Hello. My name is Georges.</h2>
-              <p>Programmer, and Video Game Enthusiast</p>
+              <p>Game Developer</p>
             </header>
           </section>
       </section>
@@ -76,10 +76,11 @@
                   <h2>Welcome!</h2>
                 </header>
                 <p>
-                  My name is Georges Brunet and I’m a Generalist Game Programmer based in Colorado. 
+                  My name is Georges Brunet and I’m a generalist game developer. 
                   Video games have always played a crucial role in my life and the work behind them fascinates me.
-                  I have a background in math and coding that has been a backbone in designing and making 
-                  the features I would like to see and play, specifically in the domains of gameplay programming, game design and technical art.
+                  I have a background in math and programming that has been a backbone in designing and making 
+                  the features I would like to see and play. I mainly work in commercial engines like Unreal Engine 4 & 5 and Unity,
+                    but I've worked and released stuff using frameworks like Love2D as well.
                   Some of the work I've done will be available to see in the portfolio and work tabs!
                 </p>
               </article>
