Cool new pic for game jams
- also removed dep. pages

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -90,7 +90,7 @@
 								
 								<div class="col-4 col-6-medium col-12-small">
 									<section class="box">
-										<a href="GameJams.html"class="image featured"><img src="images/GameJamPics/OubliettesCover.png" style="padding-top: 5%; "/></a>
+										<a href="GameJams.html"class="image featured"><img src="images/GameJamPics/itchiologo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%; " /></a>
 										<header>
 											<h3>Game Jam Submissions</h3>
 										</header>
