--- a/GameJams.html
+++ b/GameJams.html
@@ -90,7 +90,7 @@
 									</div>
 									<div class="col-4 col-6-medium col-12-small">
 										<section class="box">
-											<a href="https://pootpootpoot.itch.io/twisted-loop.html" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
+											<a href="https://pootpootpoot.itch.io/twisted-loop" class="image featured"><img src="images/GameJamPics/TDLGameplay.png" alt="" /></a>
 											<header>
 												<h3>Big Brain Game Jam 2.0</h3>
 											</header>
@@ -101,7 +101,7 @@
 											</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="https://pootpootpoot.itch.io/twisted-loop.html" class="button alt">View Submission</a></li>
+													<li><a href="https://pootpootpoot.itch.io/twisted-loop" class="button alt">View Submission</a></li>
 												</ul>
 											</footer>
 										</section>
