--- a/index.html
+++ b/index.html
@@ -22,14 +22,6 @@
           <nav id="nav">
               <ul>
                   <li class="current"><a href="index.html">Home</a></li>
-                  <!--<li>
-      <a href="#">Projects</a>
-      <ul>
-        <li><a href="GameJams.html">Game Jams</a></li>
-        <li><a href="GD50.html">GD50</a></li>
-        <li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-      </ul>
-    </li>-->
                   <li><a href="Portfolio.html">Portfolio</a></li>
                   <li><a href="Resume.html">Resume</a></li>
                   
@@ -42,7 +34,7 @@
           <section id="banner">
             <header>
               <h2>Hello. My name is Georges.</h2>
-              <p>Game Developer</p>
+              <p>Programmer, Game Developer</p>
             </header>
           </section>
       </section>
@@ -76,12 +68,12 @@
                   <h2>Welcome!</h2>
                 </header>
                 <p>
-                  My name is Georges Brunet and I’m a generalist game developer. 
-                  Video games have always played a crucial role in my life and the work behind them fascinates me.
+                  My name is Georges Brunet and I’m a programmer in game development. 
+                  I've worked in .
                   I have a background in math and programming that has been a backbone in designing and making 
                   the features I would like to see and play. I mainly work in commercial engines like Unreal Engine 4 & 5 and Unity,
                     but I've worked and released stuff using frameworks like Love2D as well.
-                  Some of the work I've done will be available to see in the portfolio and work tabs!
+                  Some of the work I've done is available to see in the portfolio tab above!
                 </p>
               </article>
             </div>
