--- a/Portfolio.html
+++ b/Portfolio.html
@@ -49,85 +49,102 @@
 							<header class="major">
 								<h2>PORTFOLIO</h2>
 							</header>
-							<div class="row">
+                            <div class="row">
 
-								<!-- Portfolio Boxes! -->
-								<!-- Games made with BG -->
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="BolderGames.html" class="image featured"><img src="images/WorkPics/BG_Logo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%;" /></a>
-										<header>
-											<h3>Bolder Games Titles</h3>
-										</header>
-										<p>
-											A collection of Bolder Games titles of which I've had the pleasure to work on.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="BolderGames.html" class="button alt">View Titles</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
+                                <!-- Portfolio Boxes! -->
+                                <!-- Games made with BG -->
+                                <div class="col-4 col-6-medium col-12-small">
+                                    <section class="box">
+                                        <a href="BolderGames.html" class="image featured"><img src="images/WorkPics/BG_Logo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%;" /></a>
+                                        <header>
+                                            <h3>Bolder Games Titles</h3>
+                                        </header>
+                                        <p>
+                                            A collection of Bolder Games titles of which I've had the pleasure to work on.
+                                        </p>
+                                        <footer>
+                                            <ul class="actions">
+                                                <li><a href="BolderGames.html" class="button alt">View Titles</a></li>
+                                            </ul>
+                                        </footer>
+                                    </section>
+                                </div>
 
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="PersonalPrototypes.html" class="image featured"><img src="images/EducationPics/UE4logo.png" style="width: 50%; margin: auto; padding-top: 5%;" /></a>
-										<header>
-											<h3>Personal Prototypes</h3>
-										</header>
-										<p>
-											A collection of prototypes I sometimes work on in my free time. These are largely explorative projects.
-										</p>
-										<footer>
-											<ul class="actions">
-												<li><a href="PersonalPrototypes.html" class="button alt">View Prototypes</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
+                                <div class="col-4 col-6-medium col-12-small">
+                                    <section class="box">
+                                        <a href="PersonalPrototypes.html" class="image featured"><img src="images/EducationPics/UE4logo.png" style="width: 50%; margin: auto; padding-top: 5%;" /></a>
+                                        <header>
+                                            <h3>Personal Prototypes</h3>
+                                        </header>
+                                        <p>
+                                            A collection of prototypes I sometimes work on in my free time. These are largely explorative projects.
+                                        </p>
+                                        <footer>
+                                            <ul class="actions">
+                                                <li><a href="PersonalPrototypes.html" class="button alt">View Prototypes</a></li>
+                                            </ul>
+                                        </footer>
+                                    </section>
+                                </div>
 
-								<!-- Game Jams -->
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="GameJams.html" class="image featured"><img src="images/GameJamPics/itchiologo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%; " /></a>
-										<header>
-											<h3>Game Jam Submissions</h3>
-										</header>
-										<p>
-											ALL (I think) the game jams I've participated in and the itch.io pages for them!
-										</p>
-										<footer>
-											<ul class="actions" style="text-align: center; ">
-												<li><a href="GameJams.html" class="button alt">View Submissions</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
+                                <!-- Game Jams -->
+                                <div class="col-4 col-6-medium col-12-small">
+                                    <section class="box">
+                                        <a href="GameJams.html" class="image featured"><img src="images/GameJamPics/itchiologo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%; " /></a>
+                                        <header>
+                                            <h3>Game Jam Submissions</h3>
+                                        </header>
+                                        <p>
+                                            ALL (I think) the game jams I've participated in and the itch.io pages for them!
+                                        </p>
+                                        <footer>
+                                            <ul class="actions" style="text-align: center; ">
+                                                <li><a href="GameJams.html" class="button alt">View Submissions</a></li>
+                                            </ul>
+                                        </footer>
+                                    </section>
+                                </div>
 
-								<!-- Flyweight Test Server -->
-								<div class="col-4 col-6-medium col-12-small">
-									<section class="box">
-										<a href="https://github.com/GeorgesABrunet/UETestServer/tree/main" class="image featured"><img src="images/WorkPics/TestServerlog.png" style="padding-top: 5%; " /></a>
-										<header>
-											<h3>MQTT/TCP Test Server</h3>
-										</header>
-										<p>
-											A flyweight test server template solution for projects that use MQTT/TCP messaging protocols.
+                                <!-- Flyweight Test Server -->
+                                <div class="col-4 col-6-medium col-12-small">
+                                    <section class="box">
+                                        <a href="https://github.com/GeorgesABrunet/UETestServer/tree/main" class="image featured"><img src="images/WorkPics/TestServerlog.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%; " /></a>
+                                        <header>
+                                            <h3>MQTT/TCP Test Server</h3>
+                                        </header>
+                                        <p>
+                                            A flyweight test server template solution for projects that use MQTT/TCP messaging protocols.
 
-										</p>
-										<footer>
-											<ul class="actions" style="text-align: center; ">
-												<li><a href="https://github.com/GeorgesABrunet/UETestServer/tree/main" class="button alt">View Repo</a></li>
-											</ul>
-										</footer>
-									</section>
-								</div>
+                                        </p>
+                                        <footer>
+                                            <ul class="actions" style="text-align: center; ">
+                                                <li><a href="https://github.com/GeorgesABrunet/UETestServer/tree/main" class="button alt">View Repo</a></li>
+                                            </ul>
+                                        </footer>
+                                    </section>
+                                </div>
 
 
-								<!-- End Game Jam Boxes-->
+                                <!-- Implementations
 
-							</div>
+    <div class="col-4 col-6-medium col-12-small">
+        <section class="box">
+            <a href="ShiftingMausoleum.html" class="image featured"><img src="images/PortfolioImgs/Mausoleum1.png" style= "margin: auto; " /></a>
+            <header>
+                <h3>Shifting Mausoleum</h3>
+            </header>
+            <p>
+                Features I implemented in this title like procedural arena generation, spellcasting system, and more!
+            </p>
+            <footer>
+                <ul class="actions" style="text-align: center; ">
+                    <li><a href="ShiftingMausoleum.html" class="button alt">View Submissions</a></li>
+                </ul>
+            </footer>
+        </section>
+    </div>-->
+
+                            </div>
 							<header class="major">
 								<br>
 								<h2>ALWAYS MORE COMING SOON!</h2>
