--- a/BolderGames.html
+++ b/BolderGames.html
@@ -48,26 +48,33 @@
 										<p>A collection of the company's released titles</p>
 									</header>
 									<p>
-										Bolder Games has a wonderful portfolio of games. Throughout my time at Bolder Games, I've worked as a software engineer
-										with generalist responsibilities. Here are the titles I've had the pleasure to work on that have released, to be released, or re-released!
+										Bolder Games has a cool portfolio of games. Throughout my time at Bolder Games, I've worked as a software engineer
+										with generalist responsibilities.
+										Here are the titles I've had the pleasure to work on that have been released or re-released!
 									</p>
 
 									<!-- Deep Space Scoundrel-->
 									<h3 style="text-align: center;"> Deep Space Scoundrel </h3>
 									<a class="image featured" href="https://store.steampowered.com/app/2343120/Deep_Space_Scoundrel/"><img src="images/WorkPics/DeepSpaceScoundrel.png" style="width: 35%; padding-top: 8%; margin:auto;" alt="" /></a>
+									<p> Implemented enemy spawning logic, enemy movement systems, enemy creation tools, player ship movement, player ship configuration and firing system, garage system, player locomotion system, and garage UI system. 
+									All systems were authored in C++, but are extended to blueprint.</p>
+
 
 									<!-- Starballs https://store.steampowered.com/app/366050/Star_Balls/ -->
 									<h3 style="text-align: center;"> Starballs </h3>
 									<a class="image featured" href="https://store.steampowered.com/app/366050/Star_Balls/"><img src="images/WorkPics/Starballs.png" style="width: 35%; padding-top: 8%; margin:auto;" alt="" /></a>
+									<p> Re-release, I optimized the codebase to improve performance by refactoring physics, gameplay systems. Refactored UI systems and rendering pipeline for release on the Nintendo Switch and Steam for Windows.</p>
+
 
 									<!-- Spunk and Splat https://store.steampowered.com/app/1243410/The_Adventures_of_Spunk_Dodgers_and_Splat/ -->
 									<h3 style="text-align: center;"> The Adventures of Spunk Dodgers & Splat </h3>
 									<a class="image featured" href="https://store.steampowered.com/app/1243410/The_Adventures_of_Spunk_Dodgers_and_Splat/"><img src="images/WorkPics/SpunkSplat2.png" style="width: 35%; padding-top: 8%; margin:auto;" alt="" /></a>
+									<p> Re-release. I optimized the codebase by refactoring gameplay systems as well as the UI to deploy on the Nintendo Switch.</p>
 
 									<!-- Roboshark https://store.steampowered.com/app/1235130/Roboshark_Rampage/-->
 									<h3 style="text-align: center;"> Roboshark Rampage </h3>
 									<a class="image featured" href="https://store.steampowered.com/app/1235130/Roboshark_Rampage/"><img src="images/WorkPics/Roboshark2.png" style="width: 35%; padding-top: 8%; margin:auto;" alt="" /></a>
-
+									<p> Re-release. Refactored enemy spawning and update logic to increase performance for both CPU and memory. Refactored UI systems and rendering pipeline for release on the Nintendo Switch.</p>
 								</article>
 
 							</div>
