--- a/ShiftingMausoleum.html
+++ b/ShiftingMausoleum.html
@@ -42,7 +42,7 @@
 
 								<!-- Content -->
 								<article class="box post">
-									<a href="#" class="image featured"><img src="images/GameJamPics/MMBannerArt.png" /></a>
+									<a href="#" class="image featured"><img src="images/GameJamPics/SMausBanner.png" /></a>
 									<header>
 										<h2>Shifting Mausoleum</h2>
 										<p>Boss Rush 2024 Game Jam</p>
@@ -51,12 +51,17 @@
 										This game jam seemed like a good place to make a game with some friends over a month. On the genre of boss rushes, with the revealed
 										theme of "exchange", this was a good opportunity to make some features I've wanted to make for a long time.
 										And so my tasks for the game included a lot of things: environment generation, spellcasting and spells, animation and locomotion systems,
-										and more. Covering everything would be excessive and write-ups take a while to make so we'll cover a few topics.
+										and more. Covering everything would be excessive and write-ups take a while to make so I'll cover topics I find pretty cool.
 									</p>
 
 									<header>
 										<h2>Environment Generation</h2>
 									</header>
+
+                                    <iframe style="  width:100%; height:400px;"
+                                            src="https://www.youtube.com/embed/PWakX57ZtQc">
+                                    </iframe>
+
 									<p>
 										The goal of the environment is to produce an arena that thematically and functionally matches the boss to be generated for the level.
 										In order to so, I started with the idea that the environment could be built from a sequence of major parameters which would provide
@@ -88,7 +93,7 @@
 
 									</p>
 
-									<!-- PLACE POLYGON INSCRIPTION GIF HERE -->
+									<!-- PLACE POLYGON INSCRIPTION GIF HERE width="420" height="315" -->
 									<a class="image featured"><img src="images/PortfolioImgs/InscribingShapes1.gif" style="width: 35%; padding-top: 4%; margin: auto; " alt="" /></a>
 
 
@@ -378,12 +383,12 @@
 
 								<!-- Sidebar -->
 								<section class="box">
-									<a href="https://pootpootpoot.itch.io/mission-13151514" class="image featured"><img src="images/GameJamPics/ArmoryPic.png" alt="" /></a>
+									<a href="https://pootpootpoot.itch.io/shifting-mausoleum" class="image featured"><img src="images/PortfolioImgs/Mausoleum1.png" alt="" /></a>
 										<p> Visit the page on itch.io to download the game!
 										</p>
 										<footer>
 											<ul class="actions">
-												<li><a href="https://pootpootpoot.itch.io/mission-13151514" class="button alt">View itch.io Page</a></li>
+												<li><a href="https://pootpootpoot.itch.io/shifting-mausoleum" class="button alt">View itch.io Page</a></li>
 											</ul>
 										</footer>
 								</section>
