--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,14 +21,6 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<!--<li>
-	  <a href="#">Projects</a>
-	  <ul>
-		<li><a href="GameJams.html">Game Jams</a></li>
-		<li><a href="GD50.html">GD50</a></li>
-		<li><a href="IBMCapstoneProj.html">IBM Certificate Capstone</a></li>
-	  </ul>
-	</li>-->
 				<li class="current"><a href="Portfolio.html">Portfolio</a></li>
 				<li><a href="Resume.html">Resume</a></li>
 
@@ -60,7 +52,7 @@
                                             <h3>Bolder Games Titles</h3>
                                         </header>
                                         <p>
-                                            A collection of Bolder Games titles of which I've had the pleasure to work on.
+                                            A collection of the released Bolder Games titles I've had the pleasure to work on. Does not include prototypes.
                                         </p>
                                         <footer>
                                             <ul class="actions">
@@ -70,6 +62,8 @@
                                     </section>
                                 </div>
 
+                                <!-- Personal Prototypes -->
+                                <!---->
                                 <div class="col-4 col-6-medium col-12-small">
                                     <section class="box">
                                         <a href="PersonalPrototypes.html" class="image featured"><img src="images/EducationPics/UE4logo.png" style="width: 50%; margin: auto; padding-top: 5%;" /></a>
@@ -86,6 +80,7 @@
                                         </footer>
                                     </section>
                                 </div>
+
 
                                 <!-- Game Jams -->
                                 <div class="col-4 col-6-medium col-12-small">
@@ -125,24 +120,24 @@
                                 </div>
 
 
-                                <!-- Implementations
+                                <!-- Implementations-->
 
-    <div class="col-4 col-6-medium col-12-small">
-        <section class="box">
-            <a href="ShiftingMausoleum.html" class="image featured"><img src="images/PortfolioImgs/Mausoleum1.png" style= "margin: auto; " /></a>
-            <header>
-                <h3>Shifting Mausoleum</h3>
-            </header>
-            <p>
-                Features I implemented in this title like procedural arena generation, spellcasting system, and more!
-            </p>
-            <footer>
-                <ul class="actions" style="text-align: center; ">
-                    <li><a href="ShiftingMausoleum.html" class="button alt">View Submissions</a></li>
-                </ul>
-            </footer>
-        </section>
-    </div>-->
+                                <div class="col-4 col-6-medium col-12-small">
+                                    <section class="box">
+                                        <a href="ShiftingMausoleum.html" class="image featured"><img src="images/GameJamPics/SMausBanner.png" style="margin: auto; padding-top: 18%; padding-bottom: 9%;" /></a>
+                                        <header>
+                                            <h3>Shifting Mausoleum</h3>
+                                        </header>
+                                        <p>
+                                            Interesting features I implemented in this title!
+                                        </p>
+                                        <footer>
+                                            <ul class="actions" style="text-align: center; ">
+                                                <li><a href="ShiftingMausoleum.html" class="button alt">View Features</a></li>
+                                            </ul>
+                                        </footer>
+                                    </section>
+                                </div>
 
                             </div>
 							<header class="major">
