--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                   <h2>Welcome!</h2>
                 </header>
                 <p>
-                  My name is Georges Brunet and I’m a programmer in game development. 
-                  I've worked in .
+                  My name is Georges Brunet and I’m a generalist programmer in game development. 
+                  I've worked in games, virtual productions, and interactive experiences.
                   I have a background in math and programming that has been a backbone in designing and making 
                   the features I would like to see and play. I mainly work in commercial engines like Unreal Engine 4 & 5 and Unity,
                     but I've worked and released stuff using frameworks like Love2D as well.
