plugin on portfolio tab

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -85,7 +85,7 @@
                                 <!-- Game Jams -->
                                 <div class="col-4 col-6-medium col-12-small">
                                     <section class="box">
-                                        <a href="GameJams.html" class="image featured"><img src="images/GameJamPics/itchiologo.png" style="width: 80%; margin: auto; padding-top: 20%; padding-bottom: 10%; " /></a>
+                                        <a href="GameJams.html" class="image featured"><img src="images/GameJamPics/itchiologo.png" style="width: 60%; margin: auto; padding-top: 25%; padding-bottom: 15%; " /></a>
                                         <header>
                                             <h3>Game Jam Submissions</h3>
                                         </header>
@@ -120,7 +120,7 @@
                                 </div>
 
 
-                                <!-- Implementations-->
+                                <!-- Shifting Mausoleum Write-Ups-->
 
                                 <div class="col-4 col-6-medium col-12-small">
                                     <section class="box">
@@ -138,6 +138,26 @@
                                         </footer>
                                     </section>
                                 </div>
+
+                                <!-- Arena Generator Plugin -->
+
+                                <div class="col-4 col-6-medium col-12-small">
+                                    <section class="box">
+                                        <a href="https://github.com/GeorgesABrunet/ArenaGenerator/" class="image featured"><img src="images/WorkPics/ArenaGeneratorIcon.png" style="width: 60%; margin: auto; padding-top: 5%; padding-bottom: 5%;" /></a>
+                                        <header>
+                                            <h3>Arena Generator</h3>
+                                        </header>
+                                        <p>
+                                            Unreal Engine Plugin for Arena Generation.
+                                        </p>
+                                        <footer>
+                                            <ul class="actions" style="text-align: center; ">
+                                                <li><a href="https://github.com/GeorgesABrunet/ArenaGenerator/" class="button alt">View Repo</a></li>
+                                            </ul>
+                                        </footer>
+                                    </section>
+                                </div>
+
 
                             </div>
 							<header class="major">
