tweak to game jams tab

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -90,7 +90,7 @@
                                             <h3>Game Jam Submissions</h3>
                                         </header>
                                         <p>
-                                            ALL (I think) the game jams I've participated in and the itch.io pages for them!
+                                            Game jams I've participated in and the itch.io pages for them!
                                         </p>
                                         <footer>
                                             <ul class="actions" style="text-align: center; ">
